[project]
name = "nanami"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Francisco Piedrahita Velez", email = "fpiedrah@brown.edu"},
]
dependencies = ["stable-baselines3>=2.3.2", "gymnasium[classic-control]>=0.29.1", "opencv-python>=4.10.0.84", "ale-py>=0.10.1", "tqdm>=4.66.6"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
linting = ["black>=24.10.0", "isort>=5.13.2", "ruff>=0.7.2", "mypy>=1.13.0"]
